...
  /**
   *
   */
  render() {
    return (
      <DefaultLayout titleHeader={'Mes codes'}>
        <View testID='promotionView' style={{...stylePage.container_page, ...styles.container}}>
          <List
            promos={this.state.promosUser}
            loading={this.state.isLoading}
            navigate={this.props.navigation.navigate}></List>
        </View>
      </DefaultLayout>
...
